@@ -29,7 +29,11 @@ Change log next version
   when().
          get("/something");
 
-  The "responseSpec" can now be reused in a completely different test without having to duplicate the expecations in the "responseSpec" for each test.
+  The "responseSpec" can now be reused in a completely different test without having to duplicate the expecations in the "responseSpec" for each test. (issue 46).
+* You can now get the response body content when request body is empty (issue 49).
+* Added support for getting response body even when using body expecations. I.e. now this works:
+  String body = expect().body("x.y.z", equalTo("something")).when().get("/x").andReturn().body().asString(); (issue 50)
+
 Change log 1.1.2 (2011-03-04)
 -----------------------------
 * Fixed so that POST requests can return a response (e.g. Response response = post("/somewhere");) when an error occurred (status code 400 to 999). (issue 37).
